[gd_scene load_steps=7 format=3 uid="uid://c18fnr3bonxvn"]

[ext_resource type="Script" uid="uid://03tp7mcm7ys1" path="res://scenes/main/screen/login/canvas_login.gd" id="1_3tnv8"]
[ext_resource type="Theme" uid="uid://c04p4lp6xvykg" path="res://assets/themes/button.tres" id="2_qugs5"]
[ext_resource type="FontFile" uid="uid://bofdnyj367mki" path="res://assets/fonts/Sekuya-Regular.ttf" id="3_a3rua"]

[sub_resource type="Theme" id="Theme_vraol"]

[sub_resource type="LabelSettings" id="LabelSettings_kgckk"]
font_size = 40
font_color = Color(0.9137255, 0.69411767, 0.20784314, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3tnv8"]
font = ExtResource("3_a3rua")
font_size = 120
font_color = Color(0.30980393, 0.12156863, 0.22745098, 1)
outline_size = 10
outline_color = Color(0.9137255, 0.69411767, 0.20784314, 1)

[node name="CanvasLogin" type="CanvasLayer"]
script = ExtResource("1_3tnv8")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -720.0
offset_top = -320.0
offset_right = 720.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1440, 640)
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport"]
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vraol")
color = Color(0.30980393, 0.12156863, 0.22745098, 1)

[node name="ColorRectOuter" type="ColorRect" parent="SubViewportContainer/SubViewport"]
z_index = -1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.9
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vraol")
color = Color(0.9137255, 0.69411767, 0.20784314, 1)

[node name="Label" type="Label" parent="SubViewportContainer/SubViewport"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.64
offset_left = 0.19199753
offset_right = -0.1920166
offset_bottom = 0.21599579
grow_horizontal = 2
grow_vertical = 2
text = "Welcome"
label_settings = SubResource("LabelSettings_kgckk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginButton" type="Button" parent="SubViewportContainer/SubViewport"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.65
anchor_right = 0.6
anchor_bottom = 0.74
offset_left = 0.015991211
offset_top = 0.015991211
offset_bottom = 0.0079956055
theme = ExtResource("2_qugs5")
text = "Sign in with Google"

[node name="TestButton" type="Button" parent="SubViewportContainer/SubViewport"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.77
anchor_right = 0.6
anchor_bottom = 0.86
offset_left = 0.015991211
offset_top = 0.015991211
offset_bottom = 0.0079956055
theme = ExtResource("2_qugs5")
text = "Test without Google"

[node name="TitleLabel" type="Label" parent="SubViewportContainer/SubViewport"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "T E R M I N U S"
label_settings = SubResource("LabelSettings_3tnv8")
horizontal_alignment = 1
vertical_alignment = 1
